[package]
name = "rust-markdown"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTML parsing and conversion
html2md = "0.2"
scraper = "0.20"

# YAML frontmatter
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# File handling
glob = "0.3"
walkdir = "2.5"

# Performance timing
humantime = "2.1"
